2003-01-23  Sam Steingold  <sds@gnu.org>

	* type.lisp (upgraded-array-element-type): accept an &optional
	environment argument, as per ANSI CL
	(subtypep): fixed a typo (quote '(and))

2003-01-23  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main): -B specifies where -K is looked for
	* spvw.d (main): --help prints *CURRENT-LANGUAGE* and *LIB-DIRECTORY*

2003-01-21  Sam Steingold  <sds@gnu.org>

	permit multiple forms in one line of interactive input
	* reploop.lisp (break-loop): makunbound *TERMINAL-READ-STREAM*
	when clearing *DEBUG-IO*
	* debug.d (break_driver): ditto
	(read_form): do not discard unprocessed input after the first form
	in the first line (in *TERMINAL-READ-STREAM*)

2003-01-21  Mirian Crzig Lennox  <mirian@cosmic.com>

	* backquote.lisp, defmacro.lisp: translated all comments

2003-01-19  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Make clisp compiling on cygwin with g++
	* avl.d (AVL(AVLID,delete1)): legalize goto for CC=g++
	* spvw_garcol.d (free_some_unused_pages): explicit typecast
	* spvw_allocate.d (make_space_gc): modern definition, explicit typecast
	* lispbibl.d: don't define setjmp, longjmp as  _setjmp, _longjmp
	* spvw_memfile (offset_pages_t): new type
	(loadmem_from handle): use it in explicit typecast

2003-01-16  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (allocate_weakkvt): DON'T USE LOCAL VARIABLES OF TYPE
	gcv_object_t.
	* hashtabl.d (prepare_resize): Likewise.
	* spvw_typealloc.d (allocate_weakkvt_low, allocate_weakkvt): Likewise.

2003-01-16  Sam Steingold  <sds@gnu.org>

	do not bind slot names (which may be special variables) in keyword
	constructors
	* defstruct.lisp: DS-SLOT vector now has a new slot - VAR
	(make-ds-slot): init VAR
	(ds-slot-var): new function
	(ds-make-constructor-body): accept a GET-VAR argument
	(ds-make-boa-constructor): pass #'DS-SLOT-NAME to
	ds-make-constructor-body
	(ds-make-keyword-constructor): pass #'DS-SLOT-VAR to
	ds-make-constructor-body

2003-01-14  Stefan Kain  <stefan.kain@freenet.de>
